force all views to be a min height of 100vh so we have consistent scroll behavior and prevent page jump when viewing portfolio.

--- a/packages/augur-simplified/src/modules/App.styles.less
+++ b/packages/augur-simplified/src/modules/App.styles.less
@@ -12,7 +12,7 @@
     box-sizing: border-box;
     margin-top: @simple-top-bar-height;
     width: 100%;
-    min-height: calc(100vh - @simple-top-bar-height);
+    min-height: 100vh;
     margin: @simple-top-bar-height auto 0;
   }
 }
